tweak slowdown timer, add in environment banner

--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@ layout: ucla-logon
 	  {% endfor %}
 	</ul>
 	
+	<h2>w/ UCLA Logon ID on dev</h2>
+	
+	<ul>
+	  {% for collection in site.ucla-logon-mocks-on-dev %}
+	    <li>
+	      <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
+	    </li>
+	  {% endfor %}
+	</ul>
+	
+	<h2>w/ UCLA Logon ID on QA</h2>
+	
+	<ul>
+	  {% for collection in site.ucla-logon-mocks-on-qa %}
+	    <li>
+	      <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
+	    </li>
+	  {% endfor %}
+	</ul>
+	
 	<h2>w/ Med Center ID</h2>
 	
 	<ul>
