--- a/_ucla-logon-mocks/logon-with-news-message.html
+++ b/_ucla-logon-mocks/logon-with-news-message.html
@@ -3,7 +3,7 @@ title: Logon Form w/ Breaking News Message
 ---
 
 <aside class="breaking-news">
-  <h1>Breaking News!</h1>
+  <h1><i class="fa fa-bullhorn"></i>&nbsp; Breaking News! </h1>
   
   <p>🐭🐭 Mutant squirrels swarmed bruinwalk and have surrounded Ackerman. Exercise caution. Avoid carrying bags of trail mix. 🐭🐭</p>
 </aside>
