--- a/_ucla-logon-mocks/logon-with-news-message.html
+++ b/_ucla-logon-mocks/logon-with-news-message.html
@@ -5,7 +5,7 @@ title: Logon Form w/ Breaking News Message
 <aside class="breaking-news">
   <h1><i class="fa fa-bullhorn"></i>&nbsp; Mutant Squirrel Swarm! </h1>
   
-  <p>After pouring down bruinwalk they have surrounded Ackerman. Exercise caution. Avoid carrying bags of trail mix. 🐭🐭</p>
+  <p>After pouring down Bruinwalk they have surrounded Ackerman Union. Exercise caution. Avoid carrying bags of trail mix. 🐭🐭</p>
 </aside>
 
 {% include ucla-sso-form.html %}
