login expired page to match new styling

--- a/_ucla-logon-mocks/logon-timed-out.html
+++ b/_ucla-logon-mocks/logon-timed-out.html
@@ -2,14 +2,12 @@
 title: Logon Form - Timed Out
 ---
 
-<form id="sso" role="form" action="/" method="post" class="ws-validate">
-
-	<img src="{{ site.baseurl }}/images/ucla-blue.png" alt="UCLA" class="logo">
-
+<article role="status">
+  
 	<h1>The login action has expired</h1>
 
 	<p>You have a 5 minute window to complete the process, please <a href="{{site.baseurl}}/ucla-logon-mocks/">start over</a>.</p>
 	
-</form>
+</article>
 
 {% include default-sp-support.html %}
