lighten JS load
since we're dropping live form validation, webshims isn't needed, nor jquery

--- a/_ucla-logon-mocks/slowdown-timer.html
+++ b/_ucla-logon-mocks/slowdown-timer.html
@@ -6,9 +6,9 @@ title: Login Attempts Slowed - Timer Running
 	
 	{% include badge.html %}
 
-	<h1>Login Attempts Slowed Down</h1>
+	<h1>You had too many unsuccessful sign in attempts.</h1>
 
-	<p>We've noticed that there have been more than a few login attempts on this account recently. The simplest thing to do is to <a href="#">go request a password reset</a>, but you can keep on trying if you really want to!</p>
+  <p>For your security, please wait for the timer to expire before signing in again, or <a href="https://logon-asm1.logon.ucla.edu/passreset.php">reset your password</a> now.</p>
 	
 	<h2 class="error-box-solid"><span id="countdown"></span> until account unlocked</h2>
 
