--- a/_ucla-logon-mocks/slowdown-timer.html
+++ b/_ucla-logon-mocks/slowdown-timer.html
@@ -2,6 +2,24 @@
 title: Login Attempts Slowed - Timer Running
 ---
 
+<script>
+  var count = 60;
+  var counter = setInterval(timer, 1000);
+  
+  function timer()
+  {
+    count = count-1;
+    if (count <= 0)
+    {
+       clearInterval(counter);
+       //counter ended, do something here
+       return;
+    }
+  
+   document.getElementById("countdown").innerHTML = count + " seconds";
+  }
+</script>
+
 <article>
 	
 	{% include badge.html %}
