--- a/_ucla-logon-mocks/error-http-500s.html
+++ b/_ucla-logon-mocks/error-http-500s.html
@@ -6,7 +6,7 @@ title: Error - HTTP 500s
 	
 	{% include badge.html %}
 
-	<h1 class="error-title">The Single Sign-On service is experiencing some difficulties.</h1>
+	<h1 class="error-title">The Single Sign-On service is having some technical difficulties.</h1>
 	
 	<p>The support team has been notified. We are currently working on this issue. Please try again.</p>
 
