--- a/_ucla-logon-mocks/slowdown-timer.html
+++ b/_ucla-logon-mocks/slowdown-timer.html
@@ -24,9 +24,9 @@ title: Login Attempts Slowed - Timer Running
 	
 	{% include badge.html %}
 
-	<h1>You had too many unsuccessful sign in attempts.</h1>
+	<h1>You had too many unsuccessful sign in attempts. Account temporarily locked.</h1>
 
-  <p>For your security, please wait for the timer to expire before signing in again, or <a href="https://logon-asm1.logon.ucla.edu/passreset.php">reset your password</a> now.</p>
+  <p>For your security, wait for the timer to expire before signing in again or <a href="https://logon-asm1.logon.ucla.edu/passreset.php">reset your password</a> now.</p>
 	
 	<h2 class="error-box-solid"><span id="countdown"></span> until account unlocked</h2>
 
