--- a/_ucla-logon-mocks/error-env.html
+++ b/_ucla-logon-mocks/error-env.html
@@ -3,27 +3,33 @@ title: Error - Environment Fail
 ---
 
 <article role="status">
-	
-	{% include badge.html %}
+  
+  {% include badge.html %}
 
-	<h1 class="error-title">You need to do the following to use this service.</h1>
-	
-	<section id="no-js">
-  	<h2>JavaScript needs to be enabled in your browser.</h2>
-  	
-    <p></p>
-	</section>
-	
-	<section id="no-cookies">
-  	<h2>Cookies need to be enabled in your browser.</h2>
+  <h1 class="error-title">You need to do the following to use the Single Sign-On Service.</h1>
+  
+  <p>There are a few minimum requirements for it to operate securely. Please follow any instructions that appear below and try again.</p>
+  
+  <section id="no-js">
+    <h2>Enable JavaScript in your browser.</h2>
+
+    <p>For more information on this issue, please visit <a href="#">[mysterious place]</a>. If this error still occurs, please contact IT Services Client Support.</p>
   
     <p></p>
-	</section>
-	
-  <section class="browser-sux">
-  	<h2>You need a more modern browser.</h2>
-  	
-  	<p></p>
-	</section>
-	
+  </section>
+  
+  <section id="no-cookies">
+    <h2>Enable Cookies in your browser.</h2>
+  
+    <p>For more information on this issue, please visit <a href="#">[mysterious place]</a>. If this error still occurs, please contact IT Services Client Support.</p>
+  </section>
+  
+  <section id="browser-sux">
+    <h2>Download or upgrade to a modern browser.</h2>
+    
+    <p>The latest version of <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> or <a href="https://encrypted.google.com/intl/en/chrome/browser/">Google Chrome</a> should work great on all popular desktop operating systems.</p>
+    
+    <p>If you're using Windows you can <a href="http://microsoft.com/ie">download the latest version of Internet Explorer</a> supported by your version of Windows. OS X users can get newer versions of Safari by <a href="https://support.apple.com/en-us/HT201541">installing OS X updates</a>.</p>
+  </section>
+  
 </article>
