--- a/_ucla-logon-mocks/error-env.html
+++ b/_ucla-logon-mocks/error-env.html
@@ -25,7 +25,7 @@ title: Error - Environment Fail
   </section>
   
   <section id="browser-sux">
-    <h2>Download or upgrade to a modern browser.</h2>
+    <h2>Upgrade to a modern browser.</h2>
     
     <p>The latest version of <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> or <a href="https://encrypted.google.com/intl/en/chrome/browser/">Google Chrome</a> should work great on all popular desktop operating systems.</p>
     
