--- a/_ucla-logon-mocks/slowdown-timer.html
+++ b/_ucla-logon-mocks/slowdown-timer.html
@@ -21,10 +21,10 @@ title: Login Attempts Slowed - Timer Running
 	
 	{% include badge.html %}
 
-	<h1>You had too many unsuccessful sign in attempts. Account temporarily locked.</h1>
+	<h1>You had too many unsuccessful sign in attempts. Please wait a minute.</h1>
 
-  <p>For your security, wait for the timer to expire before signing in again or <a href="https://logon-asm1.logon.ucla.edu/passreset.php">reset your password</a> now.</p>
+  <p>Login attempts slowed down for your security. You can wait for the timer to expire or go <a href="https://logon-asm1.logon.ucla.edu/passreset.php">reset your password</a> now if you've forgotten it.</p>
 	
-	<h2 class="error-box-solid"><span id="countdown"></span> until account unlocked</h2>
+	<h2 class="error-box-solid"><span id="countdown"></span> until you can attempt to login</h2>
 
 </article>
