have timer end match slowdown text

--- a/_ucla-logon-mocks/slowdown-timer-end.html
+++ b/_ucla-logon-mocks/slowdown-timer-end.html
@@ -6,10 +6,10 @@ title: Login Attempts Slowed - Timer Over
 	
 	{% include badge.html %}
 
-	<h1>Login Attempts Slowed Down</h1>
+	<h1>You had too many unsuccessful sign in attempts. Please wait a minute.</h1>
 
-	<p>We've noticed that there have been more than a few login attempts on this account recently. The simplest thing to do is to <a href="#">go request a password reset</a>, but you can keep on trying if you really want to!</p>
+  <p>Login attempts slowed down for your security. You can wait for the timer to expire or go <a href="https://logon-asm1.logon.ucla.edu/passreset.php">reset your password</a> now if you've forgotten it.</p>
 	
-	<h2>Account unlocked, you can <a href="{{site.baseurl}}/ucla-logon-mocks/">sign in</a>.</h2>
+	<h2>You can attempt to <a href="{{site.baseurl}}/ucla-logon-mocks/">sign in again</a>!</h2>
 
 </article>
