add email contact to env fail page

--- a/_ucla-logon-mocks/error-env.html
+++ b/_ucla-logon-mocks/error-env.html
@@ -13,7 +13,7 @@ title: Error - Environment Fail
   <section id="no-js">
     <h2>Enable JavaScript in your browser.</h2>
 
-    <p>For more information on this issue, please visit <a href="#">[mysterious place]</a>. If this error still occurs, please contact IT Services Client Support.</p>
+    <p>For more information on this issue, please visit <a href="#">[mysterious place]</a>. If this error still occurs, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>.</p>
   
     <p></p>
   </section>
@@ -21,7 +21,7 @@ title: Error - Environment Fail
   <section id="no-cookies">
     <h2>Enable Cookies in your browser.</h2>
   
-    <p>For more information on this issue, please visit <a href="#">[mysterious place]</a>. If this error still occurs, please contact IT Services Client Support.</p>
+    <p>For more information on this issue, please visit <a href="#">[mysterious place]</a>. If this error still occurs, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>.</p>
   </section>
   
   <section id="browser-sux">
