get rid of wrap on time out

--- a/_ucla-logon-mocks/logon-timed-out.html
+++ b/_ucla-logon-mocks/logon-timed-out.html
@@ -1,12 +1,12 @@
 ---
-title: Logon Form - Timed Out
+title: Logon Form Timed Out
 ---
 
 <article role="status">
   
-	<h1>The login action has expired</h1>
+	<h1>The sign-in action has expired</h1>
 
-	<p>You have a 5 minute window to complete the process, please <a href="{{site.baseurl}}/ucla-logon-mocks/">start over</a>.</p>
+	<p>There's a 5 minute window to complete signing-in, please <a href="{{site.baseurl}}/ucla-logon-mocks/">start over</a>.</p>
 	
 </article>
 
