--- a/_ucla-logon-mocks/slowdown-timer-end.html
+++ b/_ucla-logon-mocks/slowdown-timer-end.html
@@ -6,7 +6,7 @@ title: Login Attempts Slowed - Timer Over
 	
 	{% include badge.html %}
 
-	<h1>You had too many unsuccessful sign-on attempts. Please wait a bit.</h1>
+	<h1>You had too many unsuccessful Single Sign-On attempts. Please wait a bit.</h1>
 
   <p>For your security we have slowed down your sign-on attempts. You can wait for the timer to expire and try signing in again, or go <a href="https://logon-asm1.logon.ucla.edu/passreset.php">reset your password</a> now if you've forgotten it.</p>
 	
