font-awesome to js spinner. consolidate idp/sp go
faster load times since we're not using much of the lib, no cdn reliance, ie9 spins.

--- a/_medcenter-mocks/redirecting-to-login.html
+++ b/_medcenter-mocks/redirecting-to-login.html
@@ -5,5 +5,5 @@ title: Redirecting to Initial Login
 <article>
 	<h1>Redirecting to Login Page</h1>
 	
-	<p class="loading"><i class="fa fa-circle-o-notch fa-spin"></i></p>
+	<p id="loading-spinner"></p>
 </article>
