--- a/_ucla-logon-mocks/success-redirect.html
+++ b/_ucla-logon-mocks/success-redirect.html
@@ -1,11 +1,11 @@
 ---
-title: Success - goto IdP
+title: Success - goto IDP/SP
 ---
 
 <article>
 	<h1>You Have Signed In</h1>
 	
-	<p class="loading"><i class="fa fa-circle-o-notch fa-spin"></i></p>
+	<p id="loading-spinner"></p>
 	
 	<p>It might take a few seconds to redirect you to the site you're logging into. Hang in there!</p>
 </article>
