--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: ucla-logon
 	
 	<h2>w/ UCLA Logon ID</h2>
 	
-	<ul>
+	<ul class="branded">
 	  {% for collection in site.ucla-logon-mocks %}
 	    <li>
 	      <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
@@ -18,7 +18,7 @@ layout: ucla-logon
 	
 	<h2>w/ UCLA Logon ID on dev</h2>
 	
-	<ul>
+	<ul class="branded">
 	  {% for collection in site.ucla-logon-mocks-on-dev %}
 	    <li>
 	      <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
@@ -28,7 +28,7 @@ layout: ucla-logon
 	
 	<h2>w/ UCLA Logon ID on QA</h2>
 	
-	<ul>
+	<ul class="branded">
 	  {% for collection in site.ucla-logon-mocks-on-qa %}
 	    <li>
 	      <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
@@ -38,7 +38,7 @@ layout: ucla-logon
 	
 	<h2>w/ Med Center ID</h2>
 	
-	<ul>
+	<ul class="branded">
 	  {% for collection in site.medcenter-mocks %}
 	    <li>
 	      <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
@@ -48,7 +48,7 @@ layout: ucla-logon
 	
 	<h2>As an Application </h2>
 	
-	<ul>
+	<ul class="branded">
 	  {% for collection in site.as-app-mocks %}
 	    <li>
 	      <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
