add in info for tickets

--- a/_ucla-logon-mocks/error-back.html
+++ b/_ucla-logon-mocks/error-back.html
@@ -10,7 +10,16 @@ title: Error - Back Button Error
 	
 	<p>Please close your browser and try to sign in again.</p>
 	
-	<p>If the error still occurs, and you think you should have access to this site, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a> with the information below.</p>
+	<p>If the error still occurs, and you think you should have access to this site, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>. Copy the information below and complete if necessary:</p>
+	
+	<ul class="ticket-info">
+    <li>Your UCLA Logon ID: foobear</li>
+    <li>Name of the application attempting to access: foobear paradise</li>
+    <li>IP Address: 1.2.3.4</li>
+    <li>Browser Information: Chrome 44, OS X 10.11.0</li>
+    <li>Request ID: shb4-23e208ec-3d42-11e5</li>
+    <li>Error Message: IdP Error message</li>
+	</ul>
 
   <p>For more information on this issue, please visit [mysterious place].</p>
 	
