--- a/_ucla-logon-mocks/error-new.html
+++ b/_ucla-logon-mocks/error-new.html
@@ -20,6 +20,16 @@ title: Error - New
     <li><a href="https://www.it.ucla.edu/news-and-events/the-ucla-logon-page-is-changing">Why does UCLA Logon service require cookies?</a></li>
   </ul>
   
-  <p>For further assistance, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>.</p>
+  <p>For further assistance, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>. Copy the information below and complete if necessary:</p>
+	
+	<ul class="ticket-info">
+    <li>Your UCLA Logon ID: foobear</li>
+    <li>Name of the application attempting to access: foobear paradise</li>
+    <li>IP Address: 1.2.3.4</li>
+    <li>Browser Information: Chrome 44, OS X 10.11.0</li>
+    <li>Request ID: shb4-23e208ec-3d42-11e5</li>
+    <li>Error Message: IdP Error message</li>
+	</ul>
+
   
 </article>
