slight wording tweaks

--- a/_ucla-logon-mocks/error-back.html
+++ b/_ucla-logon-mocks/error-back.html
@@ -10,7 +10,7 @@ title: Error - Back Button Error
 	
 	<p>Please close your browser and try to sign in again.</p>
 	
-	<p>If the error still occurs, and you think you should have access to this site, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>. Copy the information below and complete if necessary:</p>
+	<p>If the error still occurs and you think you should have access to this site, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>. Copy the information below and complete if necessary:</p>
 	
 	<ul class="ticket-info">
     <li>Your UCLA Logon ID: foobear</li>
