--- a/_ucla-logon-mocks/error-generic.html
+++ b/_ucla-logon-mocks/error-generic.html
@@ -10,8 +10,7 @@ title: Error - Generic / Failsafe
 	
 	<p>The support team has been notified. We are currently working on this issue. Please try again.</p>
 
-  <p>If you have additional questions, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>. Copy the information below and complete if necessary:</p>
-	
+  <p>If you have additional questions, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>, copying the information below and filling in missing items if necessary:</p>	
 	<ul class="ticket-info">
     <li>Your UCLA Logon ID: foobear</li>
     <li>Name of the application attempting to access: foobear paradise</li>
