--- a/_ucla-logon-mocks/error-new.html
+++ b/_ucla-logon-mocks/error-new.html
@@ -12,7 +12,7 @@ title: Error - New
     <li><a href="https://www.it.ucla.edu/news-and-events/the-ucla-logon-page-is-changing">Enable your browser cookies.</a> The UCLA Logon service requires browser cookies to be enabled.</li>
   </ol>
   
-  <h3>See Also</h3>
+  <h3>See also</h3>
   
   <ul class="meta">
     <li><a href="https://www.it.ucla.edu/news-and-events/the-ucla-logon-page-is-changing">Why can’t I bookmark the UCLA Logon page?</a></li>
@@ -20,7 +20,9 @@ title: Error - New
     <li><a href="https://www.it.ucla.edu/news-and-events/the-ucla-logon-page-is-changing">Why does UCLA Logon service require cookies?</a></li>
   </ul>
   
-  <p>For further assistance, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>. Copy the information below and complete if necessary:</p>
+  <h3>Report this error</h3>
+  
+  <p>For further assistance please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>, copying the information below and filling in missing items if necessary:</p>
 	
 	<ul class="ticket-info">
     <li>Your UCLA Logon ID: foobear</li>
