--- a/_ucla-logon-mocks/error-comm.html
+++ b/_ucla-logon-mocks/error-comm.html
@@ -8,7 +8,7 @@ title: Error - Clock Skew / Wrong ACS URL / SP not registered
 
 	<h1 class="error-title">The Single Sign-On service is having difficulty communicating with the application you are trying to access.</h1>
 	
-	<p>The support team has been notified. You may still have access to other applications. If you have additional questions please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a> copy the information below and complete if necessary:</p>
+	<p>The support team has been notified. You may still have access to other applications. If you have additional questions, please contact IT Services Client Support at <a href="mailto:sdhelp@it.ucla.edu">sdhelp@it.ucla.edu</a>, copying the information below and filling in missing items if necessary:</p>
 	
 	<ul class="ticket-info">
     <li>Your UCLA Logon ID: foobear</li>
