--- a/_ucla-logon-mocks/mfa-enrollment.html
+++ b/_ucla-logon-mocks/mfa-enrollment.html
@@ -2,16 +2,16 @@
 title: MFA 2 - Enrollment
 ---
 
-<article role="status">
+<article role="status" class="wide">
   
   <h1>Enroll in 2FA Below</h1>
   
   <img src="../images/duo-iframe.png">
-  
-  <aside class="sp-support">
+
+</article>
+
+<aside class="sp-support wide">
 	<h2>You're Enrolling in Two Factor Authentication</h2>
 	
 	<p>Irony mustache semiotics green juice, meggings aliquip iPhone art party.  PBR&amp;B roof party sustainable ethical fixie paleo.  Aesthetic pork belly lo-fi ethical austin chillwave.  Lumbersexual nostrud twee portland deserunt  letterpress, you probably haven't heard of them cold-pressed crucifix wolf kitsch enim knausgaard cred.  Aesthetic bitters humblebrag paleo affogato bicycle rights keffiyeh fap portland, officia  YOLO thundercats culpa  gluten-free.  Chartreuse lumbersexual umami, franzen tempor cliche street art man braid.  Sartorial sunt aliquip four loko, typewriter accusamus butcher cardigan bushwick art party schlitz scenester photo booth.</p>
 </aside>
-
-</article>
