--- a/_ucla-logon-mocks/mfa-landing.html
+++ b/_ucla-logon-mocks/mfa-landing.html
@@ -3,21 +3,17 @@ title: MFA 1 - Landing
 ---
 
 <article role="status">
-  
+
   <h1>Welcome to Two Factor Authentication Enrollment</h1>
-  
+
   <h2>Why Two Factor Authentication at UCLA?</h2>
 
 	<p>Irony mustache semiotics green juice, meggings aliquip iPhone art party.  PBR&amp;B roof party sustainable ethical fixie paleo.  Aesthetic pork belly lo-fi ethical austin chillwave.  Lumbersexual nostrud twee portland deserunt  letterpress, you probably haven't heard of them cold-pressed crucifix wolf kitsch enim knausgaard cred.  Aesthetic bitters humblebrag paleo affogato bicycle rights keffiyeh fap portland, officia  YOLO thundercats culpa  gluten-free.  Chartreuse lumbersexual umami, franzen tempor cliche street art man braid.  Sartorial sunt aliquip four loko, typewriter accusamus butcher cardigan bushwick art party schlitz scenester photo booth.</p>
-	
+
 	<h2>How to Manage Two Factor Authentication</h2>
 
-  <p>Once you successfully a device (or three) you can manage your preferences at <a href="logon.ucla.edu">logon.ucla.edu</a>.</p>
-  
-  <h2>Further Reading</h2>
-  
-  <p>Irony mustache semiotics green juice, meggings aliquip iPhone art party.  PBR&amp;B roof party sustainable ethical fixie paleo.  Aesthetic pork belly lo-fi ethical austin chillwave.  Lumbersexual nostrud twee portland deserunt  letterpress, you probably haven't heard of them cold-pressed crucifix wolf kitsch enim knausgaard cred.  Aesthetic bitters humblebrag paleo affogato bicycle rights keffiyeh fap portland, officia  YOLO thundercats culpa  gluten-free.  Chartreuse lumbersexual umami, franzen tempor cliche street art man braid.  Sartorial sunt aliquip four loko, typewriter accusamus butcher cardigan bushwick art party schlitz scenester photo booth.</p>
-  
+  <p>Once you successfully a device (or three) you can manage your preferences at <a href="logon.ucla.edu">logon.ucla.edu</a>. You can configure multiple devices with different methods - helpful in case you lose access to a device!</p>
+
   <button href="mfa-enrollment.html" class="primary-button">Continue to MFA enrollment</button>
-  	
+
 </article>
