updated text on landing and success-redirect

--- a/_ucla-logon-mocks/mfa-landing.html
+++ b/_ucla-logon-mocks/mfa-landing.html
@@ -4,16 +4,11 @@ title: MFA Introduction
 
 <article role="status">
 
-  <h1>Multi-Factor Authentication Enrollment</h1>
+    <h1>Enable Multi-Factor Authentication</h1>
+    <p>You have not enabled multi-factor authentication (MFA) for your account. Multi-factor authentication is an extra layer of security for your UCLA Logon ID designed to ensure that you're the only person who can access your account, even if someone knows your password.</p>
 
-  <h2>Why Multi-Factor Authentication at UCLA?</h2>
+    <p>The application you are signing into requries multi-factor authentication when signing in. Click the button below to set up multi-factor authentication.</p>
 
-	<p>Irony mustache semiotics green juice, meggings aliquip iPhone art party.  PBR&amp;B roof party sustainable ethical fixie paleo.  Aesthetic pork belly lo-fi ethical austin chillwave.  Lumbersexual nostrud twee portland deserunt  letterpress, you probably haven't heard of them cold-pressed crucifix wolf kitsch enim knausgaard cred.  Aesthetic bitters humblebrag paleo affogato bicycle rights keffiyeh fap portland, officia  YOLO thundercats culpa  gluten-free.  Chartreuse lumbersexual umami, franzen tempor cliche street art man braid.  Sartorial sunt aliquip four loko, typewriter accusamus butcher cardigan bushwick art party schlitz scenester photo booth.</p>
-
-	<h2>How to Manage Multi-Factor Authentication</h2>
-
-  <p>Once you successfully a device (or three) you can manage your preferences at <a href="logon.ucla.edu">logon.ucla.edu</a>. You can configure multiple devices with different methods - helpful in case you lose access to a device!</p>
-
-  <button href="mfa-enrollment.html" class="primary-button">Continue to MFA enrollment</button>
+    <button href="mfa-enrollment.html" class="primary-button">Set up multi-factor authentication</button>
 
 </article>
