--- a/_ucla-logon-mocks/success-redirect.html
+++ b/_ucla-logon-mocks/success-redirect.html
@@ -3,9 +3,9 @@ title: Success - goto IDP/SP
 ---
 
 <article>
-	<h1>You Have Signed In</h1>
-	
+	<h1>You Have Successfully Signed In</h1>
+
 	<p id="loading-spinner"></p>
-	
-	<p>It might take a few seconds to redirect you to the site you're logging into. Hang in there!</p>
+
+	<p>Your application is starting up. It may take a few moments. Hang in there.</p>
 </article>
