manually have to add layouts because who knows why

--- a/_ucla-logon-mocks/error-comm.html
+++ b/_ucla-logon-mocks/error-comm.html
@@ -1,5 +1,6 @@
 ---
-title: Error - Clock Skew / Wrong ACS URL / SP not registered 
+title: Error - Clock Skew / Wrong ACS URL / SP not registered
+layout: ucla-logon
 ---
 
 <article role="status">
