--- a/_ucla-logon-mocks/mfa-landing.html
+++ b/_ucla-logon-mocks/mfa-landing.html
@@ -10,6 +10,6 @@ layout: ucla-logon
 
     <p>The application you are signing into requries multi-factor authentication when signing in. Click the button below to set up multi-factor authentication.</p>
 
-    <button href="mfa-enrollment.html" class="primary-button">Set up multi-factor authentication</button>
+    <a href="#" class="button primary-button">Set up multi-factor authentication</a>
 
 </article>
