--- a/src/pages/_as-app-mocks/logon-fail.html
+++ b/src/pages/_as-app-mocks/logon-fail.html
@@ -3,6 +3,6 @@ title: Logon Form w/ Failed Login
 layout: as-app
 ---
 
-{{> include as-app-sso-form-fail.html }}
+{{> as-app-sso-form-fail.html }}
 
-{{> include as-app-sp-support.html }}
+{{> as-app-sp-support.html }}
