--- a/src/pages/_medcenter-mocks/fatal-error-contact-sp.html
+++ b/src/pages/_medcenter-mocks/fatal-error-contact-sp.html
@@ -9,6 +9,6 @@ layout: medcenter
 	
 	<p>There's something wrong with Lambda Lab's Xen server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Lambda Lab</a></strong>.</p>
 	
-	{{> include fatal-report-form.html }}
+	 {{> fatal-report-form.html }}
 
 </article>
