--- a/src/pages/_medcenter-mocks/index.html
+++ b/src/pages/_medcenter-mocks/index.html
@@ -3,6 +3,6 @@ title: Logon Form
 layout: medcenter
 ---
 
-{{> include health-sso-form.html }}
+{{> health-sso-form.html }}
 
-{{> include default-sp-support.html }}
+{{> default-sp-support.html }}
