--- a/src/pages/_ucla-logon-mocks-on-qa/index.html
+++ b/src/pages/_ucla-logon-mocks-on-qa/index.html
@@ -3,6 +3,6 @@ title: Logon Form
 layout: ucla-logon-on-qa
 ---
 
-{{> include ucla-sso-form.html }}
+{{> ucla-sso-form.html }}
 
-{{> include default-sp-support.html }}
+{{> default-sp-support.html }}
