--- a/src/pages/_ucla-logon-mocks/logon-with-medcenter.html
+++ b/src/pages/_ucla-logon-mocks/logon-with-medcenter.html
@@ -3,6 +3,6 @@ title: Logon Form w/ Medcenter Login
 layout: ucla-logon
 ---
 
-{{> include ucla-sso-form-secondary.html }}
+{{> ucla-sso-form-secondary.html }}
 
-{{> include default-sp-support.html }}
+{{> default-sp-support.html }}
