--- a/src/pages/_ucla-logon-mocks/alert-bookmarked-login.html
+++ b/src/pages/_ucla-logon-mocks/alert-bookmarked-login.html
@@ -5,7 +5,7 @@ layout: ucla-logon
 
 <article role="alert">
 	
-	{{> include badge.html }}
+	 {{> badge.html }}
 	
 	<h1>Don't bookmark this page!</h1>
 	
