--- a/src/pages/_ucla-logon-mocks/alert-retry.html
+++ b/src/pages/_ucla-logon-mocks/alert-retry.html
@@ -5,7 +5,7 @@ layout: ucla-logon
 
 <article role="alert">
 	
-	{{> include badge.html }}
+	{{> badge.html }}
 	
 	<h1>Retry the sign-in process.</h1>
 	
