--- a/src/pages/_ucla-logon-mocks/error-back.html
+++ b/src/pages/_ucla-logon-mocks/error-back.html
@@ -5,7 +5,7 @@ layout: ucla-logon
 
 <article role="status">
 	
-	{{> include badge.html }}
+	{{> badge.html }}
 
 	<h1 class="error-title">You may have hit the back button during sign in.</h1>
 	
