--- a/src/pages/_ucla-logon-mocks/error-http-403-404.html
+++ b/src/pages/_ucla-logon-mocks/error-http-403-404.html
@@ -5,7 +5,7 @@ layout: ucla-logon
 
 <article role="status">
 	
-	{{> include badge.html }}
+	{{> badge.html }}
 	
 	<h1 class="error-title">Page not found.</h1>
 	
