--- a/src/pages/_ucla-logon-mocks/error-http-500s.html
+++ b/src/pages/_ucla-logon-mocks/error-http-500s.html
@@ -5,7 +5,7 @@ layout: ucla-logon
 
 <article role="status">
 	
-	{{> include badge.html }}
+	{{> badge.html }}
 
 	<h1 class="error-title">The Single Sign-On service is having some technical difficulties.</h1>
 	
