--- a/src/pages/_ucla-logon-mocks/slowdown-timer.html
+++ b/src/pages/_ucla-logon-mocks/slowdown-timer.html
@@ -20,7 +20,7 @@ layout: ucla-logon
 
 <article>
 	
-	{{> include badge.html }}
+	 badge.html }}
 
 	<h1>You had too many unsuccessful Single Sign-On attempts. Please wait a bit.</h1>
 
