--- a/src/pages/_medcenter-mocks/logon-base-with-ucla.html
+++ b/src/pages/_medcenter-mocks/logon-base-with-ucla.html
@@ -3,6 +3,6 @@ title: Logon Form w/ UCLA Login
 layout: medcenter
 ---
 
-{{> health-sso-form-secondary.html }}
+{{> health-sso-form-secondary }}
 
-{{> default-sp-support.html }}
+{{> default-sp-support }}
