--- a/src/pages/_medcenter-mocks/logon-fail.html
+++ b/src/pages/_medcenter-mocks/logon-fail.html
@@ -3,6 +3,6 @@ title: Logon Form w/ Failed Login
 layout: medcenter
 ---
 
-{{> health-sso-form-fail.html }}
+{{> health-sso-form-fail }}
 
-{{> default-sp-support.html }}
+{{> default-sp-support }}
