--- a/src/pages/_ucla-logon-mocks/logon-fail.html
+++ b/src/pages/_ucla-logon-mocks/logon-fail.html
@@ -3,6 +3,6 @@ title: Logon Form after Failed Login
 layout: ucla-logon
 ---
 
-{{> ucla-sso-form-fail.html }}
+{{> ucla-sso-form-fail }}
 
-{{> default-sp-support.html }}
+{{> default-sp-support }}
