--- a/src/pages/_as-app-mocks/index.html
+++ b/src/pages/_as-app-mocks/index.html
@@ -3,6 +3,6 @@ title: Logon Form
 layout: as-app
 ---
 
-{{> as-app-sso-form.html }}
+{{> as-app-sso-form }}
 
-{{> as-app-sp-support.html }}
+{{> as-app-sp-support }}
