--- a/src/pages/_medcenter-mocks/fatal-error-contact-idp.html
+++ b/src/pages/_medcenter-mocks/fatal-error-contact-idp.html
@@ -9,6 +9,6 @@ layout: medcenter
 	
 	<p>There's something wrong with the Login Server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">ITS</a></strong>.</p>
 	
-	 {{> fatal-report-form.html }}
+	 {{> fatal-report-form }}
 
 </article>
