--- a/src/pages/_medcenter-mocks/logon-base-with-custom-sp.html
+++ b/src/pages/_medcenter-mocks/logon-base-with-custom-sp.html
@@ -3,7 +3,7 @@ title: Logon Form w/ Custom SP News
 layout: medcenter
 ---
 
-{{> health-sso-form.html }}
+{{> health-sso-form }}
 
 <aside class="sp-support">
 	<h2>Common Collaboration & Learning Environment Application Support</h2>
