--- a/src/pages/_ucla-logon-mocks-on-dev/index.html
+++ b/src/pages/_ucla-logon-mocks-on-dev/index.html
@@ -3,6 +3,6 @@ title: Logon Form
 layout: ucla-logon-on-dev
 ---
 
-{{> ucla-sso-form.html }}
+{{> ucla-sso-form }}
 
-{{> default-sp-support.html }}
+{{> default-sp-support }}
