--- a/src/pages/_ucla-logon-mocks/error-env.html
+++ b/src/pages/_ucla-logon-mocks/error-env.html
@@ -5,7 +5,7 @@ layout: ucla-logon
 
 <article role="status">
   
-  {{> badge.html }}
+  {{> badge }}
 
   <h1 class="error-title">To use the UCLA Logon service, you need to do the following:</h1>
     
