--- a/src/pages/_ucla-logon-mocks/error-generic.html
+++ b/src/pages/_ucla-logon-mocks/error-generic.html
@@ -5,7 +5,7 @@ layout: ucla-logon
 
 <article role="status">
 	
-	{{> badge.html }}
+	{{> badge }}
 
 	<h1 class="error-title">The Single Sign-On service is having some technical difficulties.</h1>
 	
