--- a/src/pages/_ucla-logon-mocks/logon-with-custom-sp.html
+++ b/src/pages/_ucla-logon-mocks/logon-with-custom-sp.html
@@ -3,7 +3,7 @@ title: Logon Form w/ Custom SP News
 layout: ucla-logon
 ---
 
-{{> ucla-sso-form.html }}
+{{> ucla-sso-form }}
 
 <aside class="sp-support">
 	<h2>Common Collaboration & Learning Environment Application Support</h2>
