--- a/src/pages/_ucla-logon-mocks/logon-with-news-message.html
+++ b/src/pages/_ucla-logon-mocks/logon-with-news-message.html
@@ -9,6 +9,6 @@ layout: ucla-logon
   <p>After pouring down Bruinwalk they have surrounded Ackerman Union. Exercise caution. Avoid carrying bags of trail mix. 🐭🐭</p>
 </aside>
 
-{{> ucla-sso-form.html }}
+{{> ucla-sso-form }}
 
-{{> default-sp-support.html }}
+{{> default-sp-support }}
