--- a/src/pages/_ucla-logon-mocks/slowdown-timer-end.html
+++ b/src/pages/_ucla-logon-mocks/slowdown-timer-end.html
@@ -5,7 +5,7 @@ layout: ucla-logon
 
 <article>
 	
-	{{> badge.html }}
+	{{> badge }}
 
 	<h1>You had too many unsuccessful Single Sign-On attempts. Please wait a bit.</h1>
 
