--- a/as-app-mocks/index.html
+++ b/as-app-mocks/index.html
@@ -56,7 +56,7 @@
 
 	 <footer role="contentinfo" class="ucla-iam-footer">
 	 	<div class="ucla-iam-footer-content">
-	 		<p><a href="..//ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: </span></p>
+	 		<p><a href="..//ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a></p>
 	 	</div>
 	 </footer>
 	 
