--- a/index.html
+++ b/index.html
@@ -16,198 +16,198 @@
 	<header class="logo" role="banner"><img src="assets/img/ucla-white.png" alt="UCLA"></header>
 
 	<section class="content" role="main">
-
+			
 			<article>
-
+			
 				<h1>Mockup screens for logging in...</h1>
-
+			
 				<h2>w/ UCLA Logon ID</h2>
-
+			
 			<ul>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/alert-bookmarked-login.html">Alert - Bookmarked Login</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/alert-retry.html">Alert - Retry Sign-on Process</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/cms-faq.html">CMS - FAQ (eventually?)</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/cms-policies.html">CMS - Privacy, Security &amp; Legal</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/error-back.html">Error - Back Button Error</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/error-comm.html">Error - Clock Skew / Wrong ACS URL / SP not registered</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/error-env.html">Error - Environment Fail</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/error-generic.html">Error - Generic / Failsafe</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/error-http-403-404.html">Error - HTTP 403/404</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/error-http-500s.html">Error - HTTP 500s</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/error-new.html">Error - New</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/index.html">Logon Form</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/logon-fail.html">Logon Form after Failed Login</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/logon-timed-out.html">Logon Form Timed Out</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/logon-with-custom-sp.html">Logon Form w/ Custom SP News</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/logon-with-medcenter.html">Logon Form w/ Medcenter Login</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/logon-with-news-message.html">Logon Form w/ Breaking News Message</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/logout.html">Logout Page</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/mfa-landing.html">MFA Introduction</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/redirecting-to-login.html">Redirecting to Initial Login</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/slowdown-timer-end.html">Login Attempts Slowed - Timer Over</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/slowdown-timer.html">Login Attempts Slowed - Timer Running</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="ucla-logon-mocks/success-redirect.html">Success - goto IDP/SP</a>
 				    </li>
-
+			
 				</ul>
-
+			
 				<h2>w/ UCLA Logon ID on dev</h2>
-
+			
 				<ul>
 					<li><a href="ucla-logon-mocks-on-dev/index.html">Logon Form</a></li>
 				</ul>
-
+			
 				<h2>w/ UCLA Logon ID on QA</h2>
-
+			
 				<ul>
 					<li><a href="ucla-logon-mocks-on-qa/index.html">Logon Form</a></li>
 				</ul>
-
+			
 				<h2>w/ Med Center ID</h2>
-
+			
 			<ul>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/account-locked.html">Account Locked</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/alert-bookmarked-login.html">Alert - Bookmarked Login</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/alert-retry.html">Alert - Retry Sign-on Process</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/alert-timeout.html">Alert - Timeout</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/cms-policies.html">CMS - Privacy, Security &amp; Legal</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/fatal-error-contact-idp.html">Fatal Error - Contact IdP</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/fatal-error-contact-sp.html">Fatal Error - Contact SP</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/index.html">Logon Form</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/logon-base-with-custom-sp.html">Logon Form w/ Custom SP News</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/logon-base-with-ucla.html">Logon Form w/ UCLA Login</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/logon-fail.html">Logon Form w/ Failed Login</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/redirecting-to-login.html">Redirecting to Initial Login</a>
 				    </li>
-
+			
 				    <li>
 				      <a href="medcenter-mocks/success-redirect.html">Success - goto IDP/SP</a>
 				    </li>
-
+			
 				</ul>
-
+			
 				<h2>As an Application </h2>
-
+			
 				<ul>
 					<li><a href="as-app-mocks/index.html">Logon Form</a></li>
 					<li><a href="as-app-mocks/logon-fail.html">Logon Form w/ Failed Login</a></li>
 				</ul>
-
+			
 			</article>
-
+			
 	</section>
 
 	<footer role="contentinfo" class="ucla-iam-footer">
 		<div class="ucla-iam-footer-content">
-			<p><a href="/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: </span></p>
+			<p><a href="/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a></p>
 		</div>
 	</footer>
-
-	<script src="assets/js/app.js"></script>
-
+	
+	<script src="/assets/js/app.js"></script>
+	
 
 </body>
 </html>
