--- a/medcenter-mocks/alert-timeout.html
+++ b/medcenter-mocks/alert-timeout.html
@@ -13,7 +13,7 @@
 <body>
 
 
-  <header class="logo" role="banner"><img src="../assets/img/health.png" alt="UCLA Health"></header>
+  <header class="logo health-logo" role="banner"><img src="../assets/img/health.png" alt="UCLA Health"></header>
 
 	<section class="content" role="main">
 			
@@ -28,7 +28,7 @@
 
 	 <footer role="contentinfo" class="ucla-iam-footer">
 	 	<div class="ucla-iam-footer-content">
-	 		<p><a href="..//medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: </span></p>
+	 		<p><a href="..//medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a></p>
 	 	</div>
 	 </footer>
 	 
