--- a/medcenter-mocks/logon-base-with-ucla.html
+++ b/medcenter-mocks/logon-base-with-ucla.html
@@ -13,7 +13,7 @@
 <body>
 
 
-  <header class="logo" role="banner"><img src="../assets/img/health.png" alt="UCLA Health"></header>
+  <header class="logo health-logo" role="banner"><img src="../assets/img/health.png" alt="UCLA Health"></header>
 
 	<section class="content" role="main">
 			
@@ -35,9 +35,9 @@
 			
 			  <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 			
-				<ul class="sso-links">
-					<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php">UCLA Logon ID</a> or Password?</a></li>
-					<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+			  <ul class="sso-links">
+					<li>Forgot your <a href="https://my.uclahealth.org/MyChart/recoverlogin.asp" title="Lookup your Medcenter ID">Medcenter ID</a> or <a href="https://my.uclahealth.org/MyChart/passwordreset.asp" title="Reset your password">Password</a>?</li>
+					<li><a href="https://my.uclahealth.org/MyChart/digidaccesscheck.asp" title="Create a Medcenter ID">Need a Medcenter ID?</a></li>
 				</ul>
 			
 			  <aside class="secondary-login">
@@ -65,7 +65,7 @@
 
 	 <footer role="contentinfo" class="ucla-iam-footer">
 	 	<div class="ucla-iam-footer-content">
-	 		<p><a href="..//medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: </span></p>
+	 		<p><a href="..//medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a></p>
 	 	</div>
 	 </footer>
 	 
