--- a/medcenter-mocks/account-locked.html
+++ b/medcenter-mocks/account-locked.html
@@ -21,9 +21,8 @@
 			
 				<h1>Account Locked</h1>
 			
-				<p>We've noticed that there have been more than a few login attempts on this account recently and it's been locked as a security precation. Please <a href="#">go request a password reset</a>.</p>
+				<p>We've noticed that there have been more than a few login attempts on this account recently and it's been locked as a security precaution. Please <a href="#">go request a password reset</a>.</p>
 				
-			
 			</article>
 	</section>
 
