--- a/src/pages/medcenter-mocks/alert-bookmarked-login.html
+++ b/src/pages/medcenter-mocks/alert-bookmarked-login.html
@@ -5,7 +5,7 @@ layout: medcenter
 
 <article role="alert">
 	
-	<h1>Don't bookmark this page!</h1>
+	<h1>Please do not bookmark this page.</h1>
 	
 	<p>You can not bookmark the sign-in page - bookmark the site you want to get to and then sign in from there.</p>
 	
