--- a/src/pages/medcenter-mocks/alert-timeout.html
+++ b/src/pages/medcenter-mocks/alert-timeout.html
@@ -7,6 +7,5 @@ layout: medcenter
 	
 	<h1>Your session ran out of time</h1>
 	
-	<p>You waited a little too long to start logging in, please go back and <a href="{{site.baseurl}}/medcenter-mocks/">start the login process</a> again.</p>
-
+    <p>Your logon session has timed out. Please click <a href="{{site.baseurl}}/medcenter-mocks/">here</a> to restart the login process </p>
 </article>
