--- a/src/pages/medcenter-mocks/success-redirect.html
+++ b/src/pages/medcenter-mocks/success-redirect.html
@@ -4,9 +4,9 @@ layout: medcenter
 ---
 
 <article>
-	<h1>You Have Signed In</h1>
+	<h1>Sign in successful</h1>
 	
 	<p id="loading-spinner"></p>
 	
-	<p>It might take a few seconds to redirect you to the site you're logging into.</p>
+	<p>It may take a few seconds to redirect you to the application.</p>
 </article>
