--- a/medcenter-mocks/account-locked.html
+++ b/medcenter-mocks/account-locked.html
@@ -13,7 +13,7 @@
 <body>
 
 
-  <header class="logo health-logo" role="banner"><img src="../assets/img/health.png" alt="UCLA Health"></header>
+  <header class="logo health-logo" role="banner"><img src="../assets/img/dgsom_uclahealth.png" alt="UCLA Health"></header>
 
 	<section class="content" role="main">
 			
@@ -21,7 +21,7 @@
 			
 				<h1>Account Locked</h1>
 			
-				<p>We've noticed that there have been more than a few login attempts on this account recently and it's been locked as a security precaution. Please <a href="#">go request a password reset</a>.</p>
+				<p>There have been five failed login attempts and your account has been locked. Please call Customer Care, 310-267-2273.</p>
 				
 			</article>
 	</section>
