--- a/medcenter-mocks/alert-timeout.html
+++ b/medcenter-mocks/alert-timeout.html
@@ -13,7 +13,7 @@
 <body>
 
 
-  <header class="logo health-logo" role="banner"><img src="../assets/img/health.png" alt="UCLA Health"></header>
+  <header class="logo health-logo" role="banner"><img src="../assets/img/dgsom_uclahealth.png" alt="UCLA Health"></header>
 
 	<section class="content" role="main">
 			
@@ -21,8 +21,7 @@
 				
 				<h1>Your session ran out of time</h1>
 				
-				<p>You waited a little too long to start logging in, please go back and <a href="/medcenter-mocks/">start the login process</a> again.</p>
-			
+			    <p>Your logon session has timed out. Please click <a href="/medcenter-mocks/">here</a> to restart the login process </p>
 			</article>
 	</section>
 
