--- a/medcenter-mocks/success-redirect.html
+++ b/medcenter-mocks/success-redirect.html
@@ -13,16 +13,16 @@
 <body>
 
 
-  <header class="logo health-logo" role="banner"><img src="../assets/img/health.png" alt="UCLA Health"></header>
+  <header class="logo health-logo" role="banner"><img src="../assets/img/dgsom_uclahealth.png" alt="UCLA Health"></header>
 
 	<section class="content" role="main">
 			
 			<article>
-				<h1>You Have Signed In</h1>
+				<h1>Sign in successful</h1>
 				
 				<p id="loading-spinner"></p>
 				
-				<p>It might take a few seconds to redirect you to the site you're logging into.</p>
+				<p>It may take a few seconds to redirect you to the application.</p>
 			</article>
 	</section>
 
