--- a/ucla-logon-mocks/logon-with-medcenter.html
+++ b/ucla-logon-mocks/logon-with-medcenter.html
@@ -45,9 +45,9 @@
 				<aside class="secondary-login">
 			  	<span class="line-thru">or</span>
 			  	
-			  	<p>Are you a member of UCLA Health Systems?</p>
+			  	<p>Are you a member of UCLA Health Sciences?</p>
 			  	
-			  	<p><a href="#">Sign In with your Med Center ID</a></p>
+			  	<p><a href="#">Sign in with your Mednet username and password</a></p>
 				</aside>
 			
 			</form>
