--- a/medcenter-mocks/cms-policies.html
+++ b/medcenter-mocks/cms-policies.html
@@ -13,7 +13,7 @@
 <body>
 
 
-  <header class="logo health-logo" role="banner"><img src="../assets/img/health.png" alt="UCLA Health"></header>
+  <header class="logo health-logo" role="banner"><img src="../assets/img/dgsom_uclahealth.png" alt="UCLA Health"></header>
 
 	<section class="content" role="main">
 			<article>
