--- a/medcenter-mocks/logon-base-with-custom-sp.html
+++ b/medcenter-mocks/logon-base-with-custom-sp.html
@@ -23,13 +23,13 @@
 			
 			  <fieldset>
 					<label for="logon"><span hidden>Your Mednet Account ID</span>
-			  		<input id="logon" name="logon" type="text" placeholder="Your Mednet Account ID" aria-required="true" pattern="[a-z0-9]{3,15}" title="Logon IDs are 3 to 15 characters long." tabindex="1" autocorrect="off" autocapitalize="none" required autofocus>
-			  		<span class="form-error">Logon IDs are 3 to 15 characters long.</span>
+			  		<input id="logon" name="logon" type="text" placeholder="Your Mednet Account ID" aria-required="true" pattern="[a-z0-9]{3,20}" title="Mednet IDs are 3 to 20 characters long." tabindex="1" autocorrect="off" autocapitalize="none" required autofocus>
+			  		<span class="form-error">Mednet IDs consist of 3 to 20 lower case characters and does not contain @mednet.ucla.edu.</span>
 					</label>
 			
 					<label for="pass"><span hidden>Your Mednet Password</span>
-					  <input id="pass" name="pass" type="password" placeholder="Your Mednet Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords are at least 8 characters long and must have 3 of the following: Numbers (0-9), Lower Case Letters (a-z), Upper Case Letters (A-Z), and/or Special Characters." tabindex="2" autocorrect="off" autocapitalize="none" required>
-					<span class="form-error">Passwords are at least 8 characters long and must have 3 of the following: Numbers (0-9), Lower Case Letters (a-z), Upper Case Letters (A-Z), and/or Special Characters.</span>
+					  <input id="pass" name="pass" type="password" placeholder="Your Mednet Password" aria-required="true" pattern="^(?:(?=.*[a-z])(?=.*[A-Z])(?=.*\d)|(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&*_+-=`|(){}\[\]:;”‘<>,.?/])|(?=.*[a-z])(?=.*\d)(?=.*[~!@#$%^&*_+-=`|(){}\[\]:;”‘<>,.?/])|(?=.*[A-Z])(?=.*\d)(?=.*[~!@#$%^&*_+-=`|(){}\[\]:;”‘<>,.?/]))[A-Za-z\d~!@#$%^&*_+-=`|(){}\[\]:;”‘<>,.?/]{8,127}$"  title="Passwords are at least 8 characters long and must have 3 of the following: Numbers (0-9), Lower Case Letters (a-z), Upper Case Letters (A-Z), and/or the following Special Characters: ~!@#$%^&*_-+=`|(){}[]:;”‘<>,.?/" tabindex="2" autocorrect="off" autocapitalize="none" required>
+					<span class="form-error">Passwords are at least 8 characters long and must have 3 of the following: Numbers (0-9), Lower Case Letters (a-z), Upper Case Letters (A-Z), and/or the following Special Characters: <kbd>~!@#$%^&*_-+=`|(){}[]:;”‘&gt;&lt;,.?/</kbd>.</span>
 					</label>
 				</fieldset>
 			  
