--- a/medcenter-mocks/alert-bookmarked-login.html
+++ b/medcenter-mocks/alert-bookmarked-login.html
@@ -7,7 +7,7 @@
 	<title>UCLA Single Sign-On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="..//assets/css/medcenter.css">
-	<script src="..//assets/js/modernizr.custom.js"></script>
+	<script src="..//assets/directlinked/modernizr.custom.js"></script>
 </head>
 
 <body>
