--- a/medcenter-mocks/logon-fail.html
+++ b/medcenter-mocks/logon-fail.html
@@ -7,7 +7,7 @@
 	<title>UCLA Single Sign-On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="..//assets/css/medcenter.css">
-	<script src="..//assets/js/modernizr.custom.js"></script>
+	<script src="..//assets/directlinked/modernizr.custom.js"></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 			
 			<form id="sso" role="form" action="/" method="post" data-abide novalidate>
 			    
-			  <legend>Sign In with Mednet ID</legend>
+			  <h1>Sign In with Mednet ID</h1>
 			    
 			  <div>
 			    <h2 class="error-title">Your ID and/or password were incorrect.</h2>
