--- a/ucla-logon-mocks/logon-with-news-message.html
+++ b/ucla-logon-mocks/logon-with-news-message.html
@@ -7,7 +7,7 @@
 	<title>UCLA Single Sign-On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="..//assets/css/ucla-logon.css">
-	<script src="..//assets/js/modernizr.custom.js"></script>
+	<script src="..//assets/directlinked/modernizr.custom.js"></script>
 </head>
 
 <body>
@@ -24,10 +24,10 @@
 			</aside>
 			
 			<form id="sso" role="form" action="/" method="post" data-abide novalidate>
-			
-			  <legend>Sign In with your UCLA Logon ID</legend>
-			
+			  
 			  <fieldset>
+			    <legend>Sign In with your UCLA Logon ID</legend>
+			
 					<label for="logon"><span hidden>Your UCLA Logon ID</span>
 			  		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern="ucla_logon" title="Logon IDs are 2 to 15 characters long." tabindex="1" autocorrect="off" autocapitalize="none" required autofocus>
 			  		<span class="form-error">Logon IDs consist of 2 to 15 lower case letters and numbers.</span>
